# Vynn

./: .gitignore  LICENSE  Notes.txt  README.md  Timeline.md  package-lock.json  svelte.config.js
backend/: Cargo.toml  docker-compose.yml  test_storage_limit.sh
backend/deploy/: build.sh
backend/migrations/: 01_migration_script.sql  20250307035003_create_users_table.sql
backend/src/: error.rs  lib.rs  log.rs  main.rs
backend/src/cag/: ai_strategy.md  embed.rs  llm.rs  mod.rs  prompt.rs
backend/src/controllers/: db_controller.rs  user_controller.rs
backend/src/db/: pool.rs  vector.rs
backend/src/models/: ai.rs  commands.rs  db.rs  document.rs  mod.rs  permission.rs  project.rs  project_permission.rs  storage.rs  user.rs
backend/src/rag/: ai_strategy.md  embed.rs  llm.rs  mod.rs  prompt.rs  retrieval.rs
backend/src/web/middleware/: middleware.rs
backend/src/web/routes/: ai_controller.rs  db_controller.rs  doc_controller.rs  key_controller.rs  mod.rs  pref_controller.rs  proj_controller.rs  user_controller.rs
backend/tests/: README.md  mod.rs  test_ai.rs  test_documents.rs  test_environment.rs  test_http.rs  test_keybindings.rs  test_preferences.rs  test_projects.rs  test_users.rs
docs/: Notes.md  ProjectDirectory.txt  Timeline.md  routes.txt
docs/prompts/: 03_21_prompt.txt  03_27_prompt.txt  03_29_prompt.txt  04_05_prompt.txt  04_06_prompt.txt  04_12_prompt.txt  04_28_prompt.txt
docs/prompts/4/4/: 4_30.txt
frontend/: .prettierignore  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/components/: ChatAssistant.svelte  Footer.svelte  Navbar.svelte  ShareModal.svelte  TextEditor.svelte  Toast.svelte
frontend/src/lib/styles/: TextEditor.css
frontend/src/lib/ts/: account.ts  agent.ts  ai.ts  document.ts  drive.ts  editor-commands.ts  homepage.ts  keybindings.ts  login.ts  project.ts  signup.ts  user.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/[...catchall]/: +page.svelte
frontend/src/routes/account/: +page.svelte
frontend/src/routes/drive/: +page.svelte
frontend/src/routes/help/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/plans/: +page.svelte
frontend/src/routes/signup/: +page.svelte
(+12 files in other folders)
