[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
dotenvy = "0.15"
hyper = { version = "0.14.32", features = ["server"] }
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"