[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros", "time", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors", "fs"] }
tower-cookies = "0.9"
dotenvy = "0.15"
hyper = { version = "0.14.32", features = ["server"] }
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1"
httpc-test = "0.1.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"