[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros", "time", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors", "fs"] }
tower-cookies = { version = "0.9", features = ["private"] }
dotenvy = "0.15"
hyper = { version = "0.14.32", features = ["server"] }
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1"
httpc-test = "0.1.1"
http = "0.2"
argon2 = "0.5.0"
futures-util = "0.3"
multipart = "0.18.0"
rust-bert = "0.20.0"
pgvector = { version = "0.3.0", features = ["sqlx"] }
lazy_static = "1.4.0"
langchain-rust = "4.6.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"